# ezytutors

./: README.md
basic_error_handling/: Cargo.toml
basic_error_handling/src/: main.rs
src/: main.rs
tutor-db/: .env  Cargo.toml
tutor-db/src/: docker-compose.yaml
tutor-db/src/data/: database.sql
tutor-db/src/iter2/: handlers.rs
tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs  routes.rs
tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  main.rs  models.rs  routes.rs
