[package]
name = "tutor-nodb"
version = "0.1.0"
authors = ["cmonney"]
edition = "2021"
default-run="tutor-service"

[[bin]]
name = "basic-server"

[[bin]]
name = "tutor-service"

[dependencies]
#Actix web framework and run-time
actix-web = "4.4.0"
actix-rt = "2.9.0"

# Data serialization library
serde = { version = "1.0.193", features = ["derive"] }
# Other utilities
chrono = { version = "0.4.31", features = ["serde"]}

